# tom-test-backend

./: pyproject.toml  render.yaml
common/: models.py
config/: settings.py  urls.py
games/: admin.py  models.py  serializers.py  urls.py  views.py
games/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_game_location_alter_game_vsteam.py  0005_alter_game_team_score_alter_game_vsteam_score.py  0006_alter_game_team_score_alter_game_vsteam_score.py  0007_remove_vote_end_time_remove_vote_start_time_vote_end_and_more.py  0008_voteballot.py  0009_alter_vote_participants.py  0010_gamequota_gamequotalineup_gamequota_lineups.py
medias/: admin.py  models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_video.py  0005_remove_photo_player_photo_game.py  0006_photo_feed.py
players/: admin.py  models.py  serializers.py  urls.py  views.py
players/migrations/: 0001_initial.py  0002_initial.py  0003_player_description.py  0004_player_game_alter_player_team.py
superplayers/: admin.py  apps.py  models.py  serializers.py
superplayers/migrations/: 0001_initial.py  0002_initial.py
teams/: admin.py  models.py  serializers.py  urls.py  views.py
teams/migrations/: 0001_initial.py  0002_initial.py  0003_team_since.py  0004_team_description.py  0005_duesdetail_duespayment_team_code_alter_team_since_and_more.py  0006_alter_duespaymentitem_payment.py  0007_remove_team_spvsr_team_founder_team_spvsrs.py  0008_alter_team_founder.py  (+6 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
(+1 files in other folders)
